--- a/prod/client/assets/vue-ssr-client-manifest.json
+++ b/prod/client/assets/vue-ssr-client-manifest.json
@@ -1,600 +1,600 @@
 {
-  "publicPath": "/assets/",
+  "publicPath": "/prod/client/",
   "all": [
-    "app.4af136f357ff844f6f2e.js",
-    "pages/page3.3a8020ebc604c7f0281b.js",
-    "layouts/default.2720a4e33032deea0344.js",
-    "pages/index.aa94d51a1abbea58b49b.js",
-    "vendor.def91941182befca8868.js",
-    "pages/page2.dec818e4d34c134e0fd9.js",
-    "manifest.c19e4391b11bead3ac94.js",
+    "app.a6c4f4b87506266941b4.js",
+    "pages/page3.575f9a162e8e1e3ce1c2.js",
+    "layouts/default.5c837126c56070bbb444.js",
+    "pages/index.517910809b0209899f5d.js",
+    "vendor.5bc981e5fb8b58424bc0.js",
+    "pages/page2.4a881d4126b924fa1d22.js",
+    "manifest.5f395777614f3fe84a23.js",
     "app.cf5dd8ccbe9fdbf73a03c079fd3fb3de.css",
     "LICENSES",
     "index.spa.html",
     "index.ssr.html"
   ],
   "initial": [
-    "manifest.c19e4391b11bead3ac94.js",
-    "vendor.def91941182befca8868.js",
-    "app.4af136f357ff844f6f2e.js"
+    "manifest.5f395777614f3fe84a23.js",
+    "vendor.5bc981e5fb8b58424bc0.js",
+    "app.a6c4f4b87506266941b4.js"
   ],
   "async": [
-    "pages/page3.3a8020ebc604c7f0281b.js",
-    "layouts/default.2720a4e33032deea0344.js",
-    "pages/index.aa94d51a1abbea58b49b.js",
-    "pages/page2.dec818e4d34c134e0fd9.js"
+    "pages/page3.575f9a162e8e1e3ce1c2.js",
+    "layouts/default.5c837126c56070bbb444.js",
+    "pages/index.517910809b0209899f5d.js",
+    "pages/page2.4a881d4126b924fa1d22.js"
   ],
   "modules": {
-    "79194297": [
+    "20423747": [
       4
     ],
-    "5e2030fb": [
+    "34859255": [
       4
     ],
-    "1afbd6da": [
+    "94639074": [
       4
     ],
-    "0d9fa303": [
+    "0de326e4": [
       4
     ],
-    "0431bbbc": [
+    "678e3520": [
+      4
+    ],
+    "6fb539d6": [
+      4
+    ],
+    "805a06d6": [
       3
     ],
-    "7df351b6": [
+    "ab297a6e": [
       4
     ],
-    "36b9dc52": [
+    "64f7d1ea": [
       4
     ],
-    "4aab67b4": [
+    "6bb33074": [
       3
     ],
-    "63fbec6f": [
+    "58f2cdde": [
       0,
       7
     ],
-    "788544ed": [
+    "03606ac0": [
       4
     ],
-    "024f5a4c": [
+    "1ee15ac2": [
       4
     ],
-    "d3c8325a": [
+    "16b352ec": [
       1
     ],
-    "8688f21c": [
+    "7ae08e45": [
       4
     ],
-    "3f060786": [
+    "2d45ffd9": [
       4
     ],
-    "611f57fa": [
+    "080bfcd6": [
       4
     ],
-    "040ce483": [
+    "5ad23023": [
       3
     ],
-    "5c2440d0": [
+    "3801ea67": [
       3
     ],
-    "6bd4595b": [
-      4
-    ],
-    "73ce399d": [
+    "4ef2bce6": [
       2
     ],
-    "bc180dd0": [
+    "1e6b61a8": [
       4
     ],
-    "30aa712b": [
-      4
-    ],
-    "c55dfb58": [
-      4
-    ],
-    "d5fec4e2": [
+    "66d615f4": [
       2
     ],
-    "e1dacf22": [
+    "fadd86b6": [
+      4
+    ],
+    "da7ff004": [
+      4
+    ],
+    "68a8d2be": [
+      4
+    ],
+    "efef0c34": [
+      2
+    ],
+    "6088d4fc": [
       0,
       7
     ],
-    "027a9eea": [
+    "5ce5e01e": [
       4
     ],
-    "02a994ae": [
+    "60c0cc7c": [
       4
     ],
-    "125270ed": [
+    "746807c0": [
       4
     ],
-    "74bddcb4": [
+    "46deb354": [
       0,
       7
     ],
-    "743833c4": [
+    "4df745d1": [
       4
     ],
-    "448c0680": [
-      2
-    ],
-    "7359f3b7": [
+    "543fb5f8": [
       4
     ],
-    "4607720a": [
-      2
-    ],
-    "9d1a1a08": [
+    "dbdf92ee": [
       4
     ],
-    "b056162c": [
+    "44ccea3d": [
       4
     ],
-    "2f49522c": [
+    "60f03f6a": [
       0,
       7
     ],
-    "ea7712fa": [
-      4
-    ],
-    "6aac00bf": [
-      4
-    ],
-    "29f50b6c": [
-      4
-    ],
-    "6f284ceb": [
-      4
-    ],
-    "514a429b": [
-      2
-    ],
-    "2db39f25": [
-      2
-    ],
-    "995fc0e6": [
-      4
-    ],
-    "744c674f": [
+    "f76265d6": [
       0,
       7
     ],
-    "741cf150": [
+    "27bc6bd6": [
       4
     ],
-    "bf076a84": [
+    "d1b81c5c": [
       4
     ],
-    "7aed6f9c": [
+    "03b41d79": [
       4
     ],
-    "2f9c3c1f": [
+    "24f7457e": [
       4
     ],
-    "0d5ef3e4": [
+    "716fbabe": [
+      2
+    ],
+    "11734f20": [
       4
     ],
-    "70cc0d4a": [
+    "9c96292c": [
+      4
+    ],
+    "2bde7371": [
       0,
       7
     ],
-    "42a13678": [
+    "4b4097c6": [
       4
     ],
-    "770c25a0": [
+    "7a3b5ccb": [
       4
     ],
-    "0f2779ad": [
+    "1b3770ef": [
       4
     ],
-    "5770f60c": [
+    "0a75adac": [
       4
     ],
-    "45363eff": [
+    "12e2f1cf": [
+      0,
+      7
+    ],
+    "d88b4b1e": [
       4
     ],
-    "5e00d654": [
+    "0d284a4b": [
       4
     ],
-    "796b0802": [
+    "042cd27a": [
+      4
+    ],
+    "756a3c7a": [
+      4
+    ],
+    "c6fb3dc2": [
+      4
+    ],
+    "78416d12": [
+      4
+    ],
+    "95dfabbe": [
+      4
+    ],
+    "1959801b": [
       5
     ],
-    "832771fe": [
+    "cb6c1ed0": [
       5
     ],
-    "059cc163": [
+    "17de4da5": [
+      0,
+      7
+    ],
+    "038a7686": [
+      4
+    ],
+    "7e3c365b": [
       2
     ],
-    "07cf7d45": [
-      0,
-      7
-    ],
-    "09b53bf0": [
-      4
-    ],
-    "f9e99f78": [
+    "4514ec3a": [
       2
     ],
-    "2360becc": [
-      2
-    ],
-    "e5c69994": [
+    "5da647c3": [
       4
     ],
-    "892ad456": [
+    "f41cacb0": [
       4
     ],
-    "19bb5f2e": [
+    "01c15abc": [
       4
     ],
-    "71ae15f6": [
+    "5fee0e49": [
       4
     ],
-    "5f71a874": [
+    "3465e1fe": [
       4
     ],
-    "c3f7132a": [
+    "001a0d3e": [
       4
     ],
-    "2a3e087a": [
+    "e758c166": [
       4
     ],
-    "4eb3c4c8": [
+    "051e0eaf": [
       4
     ],
-    "546dcf2a": [
+    "3c0bdb38": [
       4
     ],
-    "140209c4": [
+    "5c41bdeb": [
       4
     ],
-    "7ce93eb8": [
+    "41211ff6": [
       4
     ],
-    "a2a89a8c": [
+    "2508c166": [
       4
     ],
-    "0ce30570": [
+    "5ba4141b": [
       4
     ],
-    "6c05d4a1": [
+    "1ed5ff18": [
       0,
       7
     ],
-    "7976bd2c": [
+    "255a383d": [
       4
     ],
-    "6692f75d": [
+    "47303aea": [
       4
     ],
-    "ebf93eb8": [
+    "780ee66d": [
       0,
       7
     ],
-    "0f884e38": [
+    "69a29071": [
       4
     ],
-    "501bc96e": [
+    "739bd8c8": [
       4
     ],
-    "cf8af72a": [
+    "78d7c7f8": [
       4
     ],
-    "43c2a175": [
+    "245fe502": [
       4
     ],
-    "c56c87cc": [
+    "038c7ee7": [
       4
     ],
-    "e5f67650": [
+    "2645fc61": [
       0,
       7
     ],
-    "47c64385": [
+    "484fcba7": [
       0,
       7
     ],
-    "3ef98b93": [
+    "79a903b1": [
       0,
       7
     ],
-    "6f001778": [
+    "04457802": [
       0,
       7
     ],
-    "a07720a4": [
+    "1607327b": [
       4
     ],
-    "27c81414": [
+    "f72cce6e": [
       4
     ],
-    "20981b9e": [
+    "0b51a4aa": [
       4
     ],
-    "94cd14fc": [
+    "46fbfb8f": [
       4
     ],
-    "0ca7b0ee": [
+    "fc985d0a": [
       4
     ],
-    "1c321d7a": [
+    "b69bd24a": [
       4
     ],
-    "d1486f64": [
-      4
-    ],
-    "cd5026f0": [
-      4
-    ],
-    "6075ca80": [
-      4
-    ],
-    "78ab2fa1": [
-      4
-    ],
-    "60fafa98": [
-      4
-    ],
-    "529afe55": [
-      4
-    ],
-    "40ea5065": [
-      2
-    ],
-    "c5cb38ca": [
-      4
-    ],
-    "56f45715": [
-      0,
-      7
-    ],
-    "eb767ef6": [
-      4
-    ],
-    "e463835a": [
-      0,
-      7
-    ],
-    "73327e99": [
-      4
-    ],
-    "fdb45a54": [
-      4
-    ],
-    "2a8d8c9a": [
-      4
-    ],
-    "528c5d08": [
-      4
-    ],
-    "7be30ef3": [
-      4
-    ],
-    "1c7c02ec": [
-      4
-    ],
-    "1d30a3b7": [
-      4
-    ],
-    "98174c0e": [
-      4
-    ],
-    "39837d7f": [
-      0,
-      7
-    ],
-    "37317da0": [
-      4
-    ],
-    "4e7a4bee": [
-      4
-    ],
-    "fbdbe97c": [
-      4
-    ],
-    "466f472a": [
-      4
-    ],
-    "501940d1": [
-      0,
-      7
-    ],
-    "3d1203cc": [
-      4
-    ],
-    "1c70b836": [
-      4
-    ],
-    "6f87858e": [
-      0,
-      7
-    ],
-    "f2de44c2": [
-      4
-    ],
-    "6d2f3542": [
-      4
-    ],
-    "bbd381e8": [
-      4
-    ],
-    "acebaaa6": [
+    "56b7036c": [
       3
     ],
-    "524f2f08": [
+    "6d2818e6": [
       4
     ],
-    "299b5b75": [
+    "12c36118": [
       4
     ],
-    "830b42fc": [
+    "33f429e5": [
+      2
+    ],
+    "557ddac1": [
+      4
+    ],
+    "969ed5b0": [
+      4
+    ],
+    "08e997f6": [
+      2
+    ],
+    "67a1776e": [
+      4
+    ],
+    "6403d292": [
+      4
+    ],
+    "4bc229f1": [
+      0,
+      7
+    ],
+    "049504a6": [
+      4
+    ],
+    "38ccee78": [
+      2
+    ],
+    "36f4cb69": [
+      4
+    ],
+    "5fc55a40": [
+      4
+    ],
+    "8e61c056": [
+      4
+    ],
+    "7de9c400": [
+      4
+    ],
+    "912b8302": [
+      4
+    ],
+    "8fc2416c": [
+      4
+    ],
+    "167a8b46": [
+      4
+    ],
+    "1dd4ecbe": [
+      0,
+      7
+    ],
+    "77da7ab3": [
+      4
+    ],
+    "8e22cb50": [
+      2
+    ],
+    "8d3fc4d4": [
+      4
+    ],
+    "d65229e2": [
+      4
+    ],
+    "328d6f06": [
+      4
+    ],
+    "0e6029f3": [
+      0,
+      7
+    ],
+    "8993dfb2": [
+      4
+    ],
+    "18634e1c": [
+      4
+    ],
+    "0fd87599": [
+      0,
+      7
+    ],
+    "21be836c": [
+      4
+    ],
+    "ccb1b356": [
+      4
+    ],
+    "55bd25c2": [
+      4
+    ],
+    "3d1b2b49": [
+      4
+    ],
+    "e043c37c": [
+      4
+    ],
+    "cb4fefce": [
       1
     ],
-    "e9b0bbd0": [
+    "01ca57ab": [
       4
     ],
-    "6793130f": [
+    "1a2a1b5c": [
       4
     ],
-    "b619ce5a": [
+    "0b35dba0": [
       4
     ],
-    "29f04434": [
+    "6013fe73": [
       4
     ],
-    "58c37c22": [
+    "4f763fc8": [
       3
     ],
-    "8af96156": [
+    "159a711a": [
       0,
       7
     ],
-    "0bb8b0ec": [
+    "71fb73b9": [
       4
     ],
-    "696c0120": [
-      2
-    ],
-    "e28ad05c": [
+    "6879a9df": [
       4
     ],
-    "3d0069d8": [
+    "2c7c8578": [
       1
     ],
-    "6a36a5c7": [
+    "170c2fd8": [
       4
     ],
-    "6d376d1c": [
+    "cca143a2": [
       4
     ],
-    "2328fe5d": [
+    "49a4f576": [
       2
     ],
-    "2c447258": [
+    "21c4adb6": [
       4
     ],
-    "216f857d": [
+    "c1bc136c": [
       4
     ],
-    "f85984b0": [
+    "7ab9ab8a": [
       4
     ],
-    "14a765be": [
+    "678d1c40": [
       0,
       7
     ],
-    "d1639e04": [
+    "023892c0": [
+      2
+    ],
+    "74ae756a": [
       4
     ],
-    "55998bd8": [
+    "945f04be": [
       4
     ],
-    "58b0328d": [
+    "46f02ae0": [
       4
     ],
-    "6f17b6a2": [
+    "0c0fabf5": [
       4
     ],
-    "52f54708": [
+    "91babfee": [
       4
     ],
-    "559e178e": [
+    "946ca7e0": [
       4
     ],
-    "55a72efa": [
+    "67ba6611": [
       4
     ],
-    "395fd1c4": [
+    "3a5805dd": [
       4
     ],
-    "099c059d": [
+    "8049e768": [
+      4
+    ],
+    "25ee0820": [
+      4
+    ],
+    "4b5bf772": [
+      4
+    ],
+    "985b03f6": [
+      2
+    ],
+    "1fb3b656": [
+      2
+    ],
+    "79713c36": [
+      4
+    ],
+    "53b10bec": [
       0,
       7
+    ],
+    "0ee5f205": [
+      4
+    ],
+    "2eb050cb": [
+      4
+    ],
+    "7e271faa": [
+      4
+    ],
+    "4dc7088a": [
+      0,
+      7
+    ],
+    "1fa634d1": [
+      4
+    ],
+    "174d9245": [
+      0,
+      7
+    ],
+    "6103eee2": [
+      4
+    ],
+    "aa1ae5d2": [
+      3
+    ],
+    "2c6e6df7": [
+      5
+    ],
+    "574d4be3": [
+      4
+    ],
+    "51f44b60": [
+      4
+    ],
+    "d3a85f20": [
+      4
+    ],
+    "0974ceb0": [
+      4
+    ],
+    "2dac3b66": [
+      4
+    ],
+    "4b4e5fda": [
+      2
     ],
     "18d26f16": [
       4
     ],
-    "0bfd7190": [
+    "39fe761f": [
       4
     ],
-    "3f864c39": [
+    "44e28091": [
       4
     ],
-    "ea0066e6": [
+    "6ce64271": [
       4
     ],
-    "9fa35cb6": [
+    "5fb552ec": [
       4
     ],
-    "1220d7bd": [
-      2
-    ],
-    "5d049f18": [
-      4
-    ],
-    "23657e28": [
-      0,
-      7
-    ],
-    "3a6f4cb8": [
-      4
-    ],
-    "66ca8c10": [
-      4
-    ],
-    "068ec0c8": [
-      2
-    ],
-    "091aff1d": [
-      4
-    ],
-    "8d391bf8": [
-      4
-    ],
-    "59665d7e": [
-      0,
-      7
-    ],
-    "ab07abdc": [
-      3
-    ],
-    "3d83df88": [
-      4
-    ],
-    "3cf25257": [
-      5
-    ],
-    "554696d6": [
-      4
-    ],
-    "74f0437d": [
-      4
-    ],
-    "0d9849c6": [
-      4
-    ],
-    "49cb8b3a": [
-      4
-    ],
-    "60ede85a": [
-      4
-    ],
-    "1fb7ec73": [
-      2
-    ],
-    "09a2ece8": [
-      4
-    ],
-    "56a2883e": [
-      4
-    ],
-    "abe5e8b8": [
-      4
-    ],
-    "1aa3e7d9": [
-      4
-    ],
-    "1459410a": [
+    "5abc335d": [
       4
     ]
   }
