--- a/firebase.json
+++ b/firebase.json
@@ -1,19 +1,13 @@
 {
   "hosting": {
-    "public": "prod/client",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "function": "nuxtssr"
-      }
-    ]
+    "public": "prod/client/assets",
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "rewrites": [{
+      "source": "**",
+      "function": "nuxtssr"
+    }]
   },
-  "functions": {
-    "source": "prod/server"
+  "database": {
+    "rules": "database.rules.json"
   }
 }
