--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "cd \"src\" && yarn dev",
     "build": "yarn build:nuxt && yarn clean && yarn copyassets",
-    "serve": "firebase serve --only functions,hosting",
+    "serve": "sudo firebase serve --only functions,hosting",
     "deploy": "firebase deploy",
     "predeploy": "yarn build",
     "setup": "yarn install && yarn setup:client && yarn setup:firebase && yarn setup:server",
@@ -16,7 +16,7 @@
     "setup:server": "cd \"prod/server\" && yarn install",
     "setup:firebase": "mv .setup-firebaserc .firebaserc",
     "copyassets": "yarn copydist && yarn copystatic",
-    "copydist": "cp -R prod/server/nuxt/dist/ prod/client/assets",
+    "copydist": "cp -R prod/server/nuxt/dist prod/client/assets",
     "copystatic": "cp -R src/static/ prod/client",
     "clean": "rimraf prod/client/assets/*",
     "build:nuxt": "cd \"src\" && yarn build"
