--- a/firebase.json
+++ b/firebase.json
@@ -1,13 +1,10 @@
 {
   "hosting": {
-    "public": "prod/client/assets",
+    "public": "prod/client",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "rewrites": [{
       "source": "**",
       "function": "nuxtssr"
     }]
-  },
-  "database": {
-    "rules": "database.rules.json"
   }
 }
